Added icons to the sidebar

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -10,19 +10,49 @@
     <div class="container">
         <div class="sidebar">
             <div class="logo">
-                <img src="./images/view-dashboard.svg" alt="dashboard icon"><span>Dashboard</span>
+                <img src="./images/view-dashboard.svg" alt="dashboard icon">
+                <h2>Dashboard</h2>
             </div>
             <ul>
-                <li><img src="" alt="">Home</li>
-                <li><img src="" alt="">Profile</li>
-                <li><img src="" alt="">Messages</li>
-                <li><img src="" alt="">History</li>
-                <li><img src="" alt="">Tasks</li>
-                <li><img src="" alt="">Communities</li>
-                <li></li>
-                <li><img src="" alt="">Settings</li>
-                <li><img src="" alt="">Support</li>
-                <li><img src="" alt="">Privacy</li>
+                <li>
+                    <img src="./images/home.svg" alt="">
+                    <div>Home</div>
+                </li>
+                <li>
+                    <img src="./images/card-account-details.svg" alt="">
+                    <div>Profile</div>
+                </li>
+                <li>
+                    <img src="./images/message-reply.svg" alt="">
+                    <div>Messages</div>
+                </li>
+                <li>
+                    <img src="./images/clock-time-three.svg" alt="">
+                    <div>History</div>
+                </li>
+                <li>
+                    <img src="./images/file-multiple.svg" alt="">
+                    <div>Tasks</div>
+                </li>
+                <li>
+                    <img src="./images/account-group.svg" alt="">
+                    <div>Communities</div>
+                </li>
+                <li>
+
+                </li>
+                <li>
+                    <img src="./images/cog.svg" alt="">
+                    <div>Settings</div>
+                </li>
+                <li>
+                    <img src="./images/help-box.svg" alt="">
+                    <div>Support</div>
+                </li>
+                <li>
+                    <img src="./images/shield-check.svg" alt="">
+                    <div>Privacy</div>
+                </li>
             </ul>
         </div>
         <div class="header">
