--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -15,42 +15,42 @@
             </div>
             <ul>
                 <li>
-                    <img src="./images/home.svg" alt="">
+                    <img src="./images/home.svg" alt="home icon">
                     <div>Home</div>
                 </li>
                 <li>
-                    <img src="./images/card-account-details.svg" alt="">
+                    <img src="./images/card-account-details.svg" alt="card icon">
                     <div>Profile</div>
                 </li>
                 <li>
-                    <img src="./images/message-reply.svg" alt="">
+                    <img src="./images/message-reply.svg" alt="message icon">
                     <div>Messages</div>
                 </li>
                 <li>
-                    <img src="./images/clock-time-three.svg" alt="">
+                    <img src="./images/clock-time-three.svg" alt="clock icon">
                     <div>History</div>
                 </li>
                 <li>
-                    <img src="./images/file-multiple.svg" alt="">
+                    <img src="./images/file-multiple.svg" alt="file icon">
                     <div>Tasks</div>
                 </li>
                 <li>
-                    <img src="./images/account-group.svg" alt="">
+                    <img src="./images/account-group.svg" alt="account icon">
                     <div>Communities</div>
                 </li>
                 <li>
 
                 </li>
                 <li>
-                    <img src="./images/cog.svg" alt="">
+                    <img src="./images/cog.svg" alt="cog icon">
                     <div>Settings</div>
                 </li>
                 <li>
-                    <img src="./images/help-box.svg" alt="">
+                    <img src="./images/help-box.svg" alt="help box icon">
                     <div>Support</div>
                 </li>
                 <li>
-                    <img src="./images/shield-check.svg" alt="">
+                    <img src="./images/shield-check.svg" alt="shield check icon">
                     <div>Privacy</div>
                 </li>
             </ul>
@@ -58,9 +58,11 @@
         <div class="header">
             <div class="search-bar">
                 <div class="header-top">
-                    <img src="" alt="magnifying glass">
-                    <input type="search">
-                    <img src="" alt="notification bell">
+                    <div class="bar">
+                        <img src="./images/magnify.svg" alt="magnifying glass">
+                        <input type="search">
+                    </div>
+                    <img src="./images/bell-ring-outline.svg" alt="notification bell">
                     <img src="" alt="profile picture"><span>Morgan Oakley</span>
                 </div>
                 <div class="header-bottom">
