Finished header, working on main

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -56,47 +56,114 @@
             </ul>
         </div>
         <div class="header">
-            <div class="search-bar">
-                <div class="header-top">
-                    <div class="bar">
-                        <img src="./images/magnify.svg" alt="magnifying glass">
-                        <input type="search">
-                    </div>
-                    <img src="./images/bell-ring-outline.svg" alt="notification bell">
-                    <img src="" alt="profile picture"><span>Morgan Oakley</span>
+            <div class="header-top">
+                <div class="search-bar">
+                    <img src="./images/magnify.svg" alt="magnifying glass">
+                    <input type="search">
                 </div>
-                <div class="header-bottom">
-                    <img src="" alt="profile picture big"><span>Hi there,<br>Morgan Oakley</span>
-                    <ul>
-                        <li>New</li>
-                        <li>Upload</li>
-                        <li>Share</li>
-                    </ul>
+                <div class="user-info">
+                    <img src="./images/bell-ring-outline.svg" alt="notification bell">
+                    <img src="./images/undraw_male_avatar_g98d.svg" alt="profile picture" id="profile-picture">
+                    <div id="user-name">Morgan Oakley</div>
+                </div>
+            </div>
+            <div class="header-bottom">
+                <div class="profile">
+                    <img src="./images/undraw_male_avatar_g98d.svg" alt="profile picture big">
+                    <div><span>Hi there,</span><br>Morgan Oakley (@morgan)</div>
+                </div>
+                <div class="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
             </div>
         </div>
         <div class="main">
             <div class="main-left">
-                <p>Your Projects</p>
+                <h3>Your Projects</h3>
                 <div class="projects">
-                    <div>Project 1</div>
-                    <div>Project 2</div>
-                    <div>Project 3</div>
-                    <div>Project 4</div>
-                    <div>Project 5</div>
-                    <div>Project 6</div>
+                    <div>
+                        <div class="content">
+                            <h4>Super Cool Project</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi.</p>   
+                        </div>
+                        <div class="icons">
+                            <img src="./images/star-plus-outline.svg" alt="a star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="an eye icon">
+                            <img src="./images/source-fork.svg" alt="a fork icon">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="content">
+                            <h4>Less Cool Project</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>    
+                        </div>
+                        <div class="icons">
+                            <img src="./images/star-plus-outline.svg" alt="a star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="an eye icon">
+                            <img src="./images/source-fork.svg" alt="a fork icon">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="content">
+                            <h4>Impossible App</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>    
+                        </div>
+                        <div class="icons">
+                            <img src="./images/star-plus-outline.svg" alt="a star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="an eye icon">
+                            <img src="./images/source-fork.svg" alt="a fork icon">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="content">
+                            <h4>Easy Peasy App</h2>
+                            <p>Lorem ipsum dolor sit dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>   
+                        </div>
+                        <div class="icons">
+                            <img src="./images/star-plus-outline.svg" alt="a star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="an eye icon">
+                            <img src="./images/source-fork.svg" alt="a fork icon">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="content">
+                            <h4>Ad Blocker</h2>
+                            <p>Lorem ipsum dolor sit amet Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>    
+                        </div>
+                        <div class="icons">
+                            <img src="./images/star-plus-outline.svg" alt="a star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="an eye icon">
+                            <img src="./images/source-fork.svg" alt="a fork icon">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="content">
+                            <h4>Money Maker</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aut et voluptatem at saepe dicta mollitia praesentium atque, possimus iusto sed. Iure vero quis odit soluta architecto</p>    
+                        </div>
+                        <div class="icons">
+                            <img src="./images/star-plus-outline.svg" alt="a star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="an eye icon">
+                            <img src="./images/source-fork.svg" alt="a fork icon">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="main-top-right">
-                <p>Announcements</p>
+                <h3>Announcements</h3>
                 <div class="announcements">
-                    <div>Announcement 1</div>
-                    <div>Announcement 2</div>
-                    <div>Announcement 3</div>
+                    <h5>Announcement 1</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque saepe corporis pariatur cum ipsa expedita, reprehenderit</p>
+                    <h5>Announcement 2</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque saepe corporis pariatur cum ipsa expedita, reprehenderit</p>
+                    <h5>Announcement 3</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque saepe corporis pariatur cum ipsa expedita, reprehenderit</p>
                 </div>
             </div>
             <div class="main-bottom-right">
-                <p>Trending</p>
+                <h3>Trending</h3>
                 <div class="trending">
                     <div>Trend 1</div>
                     <div>Trend 2</div>
