Finished announcements section

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -81,11 +81,11 @@
         </div>
         <div class="main">
             <div class="main-left">
-                <h3>Your Projects</h3>
+                <h2>Your Projects</h2>
                 <div class="projects">
                     <div>
                         <div class="content">
-                            <h4>Super Cool Project</h2>
+                            <h3>Super Cool Project</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi.</p>   
                         </div>
                         <div class="icons">
@@ -96,7 +96,7 @@
                     </div>
                     <div>
                         <div class="content">
-                            <h4>Less Cool Project</h2>
+                            <h3>Less Cool Project</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>    
                         </div>
                         <div class="icons">
@@ -107,7 +107,7 @@
                     </div>
                     <div>
                         <div class="content">
-                            <h4>Impossible App</h2>
+                            <h3>Impossible App</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>    
                         </div>
                         <div class="icons">
@@ -118,7 +118,7 @@
                     </div>
                     <div>
                         <div class="content">
-                            <h4>Easy Peasy App</h2>
+                            <h3>Easy Peasy App</h2>
                             <p>Lorem ipsum dolor sit dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>   
                         </div>
                         <div class="icons">
@@ -129,7 +129,7 @@
                     </div>
                     <div>
                         <div class="content">
-                            <h4>Ad Blocker</h2>
+                            <h3>Ad Blocker</h2>
                             <p>Lorem ipsum dolor sit amet Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam!</p>    
                         </div>
                         <div class="icons">
@@ -140,7 +140,7 @@
                     </div>
                     <div>
                         <div class="content">
-                            <h4>Money Maker</h2>
+                            <h3>Money Maker</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nam temporibus id quos dignissimos commodi dolores earum in, nesciunt tempore, porro aut aperiam animi. Repellendus cum optio amet in quam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aut et voluptatem at saepe dicta mollitia praesentium atque, possimus iusto sed. Iure vero quis odit soluta architecto</p>    
                         </div>
                         <div class="icons">
@@ -152,18 +152,20 @@
                 </div>
             </div>
             <div class="main-top-right">
-                <h3>Announcements</h3>
+                <h2>Announcements</h2>
                 <div class="announcements">
-                    <h5>Announcement 1</h5>
+                    <h4>Site Maintenance</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque saepe corporis pariatur cum ipsa expedita, reprehenderit</p>
-                    <h5>Announcement 2</h5>
+                    <hr>
+                    <h4>Community Share Day</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque saepe corporis pariatur cum ipsa expedita, reprehenderit</p>
-                    <h5>Announcement 3</h5>
+                    <hr>
+                    <h4>Updated Privacy Policy</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque saepe corporis pariatur cum ipsa expedita, reprehenderit</p>
                 </div>
             </div>
             <div class="main-bottom-right">
-                <h3>Trending</h3>
+                <h2>Trending</h2>
                 <div class="trending">
                     <div>Trend 1</div>
                     <div>Trend 2</div>
