Admin dashboard project done

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -167,10 +167,34 @@
             <div class="main-bottom-right">
                 <h2>Trending</h2>
                 <div class="trending">
-                    <div>Trend 1</div>
-                    <div>Trend 2</div>
-                    <div>Trend 3</div>
-                    <div>Trend 4</div>
+                    <div>
+                        <img src="./images/undraw_male_avatar_g98d.svg" alt="profile picture" class="blue">
+                        <div class="trend-content">
+                            <h4>@tegan</h4>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/undraw_male_avatar_g98d.svg" alt="profile picture" class="yellow">
+                        <div class="trend-content">
+                            <h4>@morgan</h4>
+                            <p>Super Cool Project</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/undraw_male_avatar_g98d.svg" alt="profile picture" class="gray">
+                        <div class="trend-content">
+                            <h4>@kendall</h4>
+                            <p>Life Changing App</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./images/undraw_male_avatar_g98d.svg" alt="profile picture" class="pink">
+                        <div class="trend-content">
+                            <h4>@alex</h4>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
