Finished layout add styles

--- a/library-app/index.html
+++ b/library-app/index.html
@@ -4,38 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./images/book-open-blank-variant-outline-white.svg">
     <script src="script.js" defer></script>
     <title>Library App</title>
 </head>
 <body>
     <header>
+        <img src="./images/book-open-blank-variant-outline.svg" alt="book icon" style="width: 40px;">
         <h1>virtual library</h1>
     </header>
     <main>
-        <button class="add-btn">+ Add Book</button>
+        <p>No books yet. Add a book from the button below</p>
+        <button id="add-btn">+ Add Book</button>
         <div class="book-container">
             <div class="card">
-                <p>title</p>
-                <p>author</p>
-                <p>pages</p>
-                <button>Read</button>
+                <p id="title">title</p>
+                <p id="author">author</p>
+                <p id="pages">pages</p>
+                <button id="read-btn">Read</button>
                 <button id="remove-btn">Remove</button>
             </div>
             <div class="card">
-                <p>title</p>
-                <p>author</p>
-                <p>pages</p>
-                <button>Read</button>
+                <p id="title">title</p>
+                <p id="author">author</p>
+                <p id="pages">pages</p>
+                <button id="read-btn">Read</button>
                 <button id="remove-btn">Remove</button>
             </div>
             <div class="card">
-                <p>title</p>
-                <p>author</p>
-                <p>pages</p>
-                <button>Read</button>
+                <p id="title">title</p>
+                <p id="author">author</p>
+                <p id="pages">pages</p>
+                <button id="read-btn">Read</button>
                 <button id="remove-btn">Remove</button>
             </div>
-
+            <div class="card">
+                <p id="title">title</p>
+                <p id="author">author</p>
+                <p id="pages">pages</p>
+                <button id="read-btn">Read</button>
+                <button id="remove-btn">Remove</button>
+            </div>
+            <div class="card">
+                <p id="title">title</p>
+                <p id="author">author</p>
+                <p id="pages">pages</p>
+                <button id="read-btn">Read</button>
+                <button id="remove-btn">Remove</button>
+            </div>
+            <div class="card">
+                <p id="title">title</p>
+                <p id="author">author</p>
+                <p id="pages">pages</p>
+                <button id="read-btn">Read</button>
+                <button id="remove-btn">Remove</button>
+            </div>
+            <div class="card">
+                <p id="title">title</p>
+                <p id="author">author</p>
+                <p id="pages">pages</p>
+                <button id="read-btn">Read</button>
+                <button id="remove-btn">Remove</button>
+            </div>
+            <dialog id="modal" id="modal">
+                <form method="dialog" class="form">
+                    <button id="close-btn">x</button>
+                    <p>Add new book</p>
+                    <input type="text" name="title" id="title" placeholder="Title">
+                    <input type="text" name="author" id="author" placeholder="Author">
+                    <input type="number" name="pages" id="pages" placeholder="Pages" min="0" max="3000">
+                    <div class="checkbox-container">
+                        <label for="read">Read</label>
+                        <input type="checkbox" name="read" id="read">
+                    </div>
+                    <button type="submit">Add Book</button>
+                </form>
+            </dialog>
         </div>
     </main>
     <footer>Yahya BULAT &copy 2024</footer>
