--- a/library-app/index.html
+++ b/library-app/index.html
@@ -24,48 +24,6 @@
                 <button id="read-btn">Read</button>
                 <button id="remove-btn">Remove</button>
             </div>
-            <div class="card">
-                <p id="title">title</p>
-                <p id="author">author</p>
-                <p id="pages">pages</p>
-                <button id="read-btn">Read</button>
-                <button id="remove-btn">Remove</button>
-            </div>
-            <div class="card">
-                <p id="title">title</p>
-                <p id="author">author</p>
-                <p id="pages">pages</p>
-                <button id="read-btn">Read</button>
-                <button id="remove-btn">Remove</button>
-            </div>
-            <div class="card">
-                <p id="title">title</p>
-                <p id="author">author</p>
-                <p id="pages">pages</p>
-                <button id="read-btn">Read</button>
-                <button id="remove-btn">Remove</button>
-            </div>
-            <div class="card">
-                <p id="title">title</p>
-                <p id="author">author</p>
-                <p id="pages">pages</p>
-                <button id="read-btn">Read</button>
-                <button id="remove-btn">Remove</button>
-            </div>
-            <div class="card">
-                <p id="title">title</p>
-                <p id="author">author</p>
-                <p id="pages">pages</p>
-                <button id="read-btn">Read</button>
-                <button id="remove-btn">Remove</button>
-            </div>
-            <div class="card">
-                <p id="title">title</p>
-                <p id="author">author</p>
-                <p id="pages">pages</p>
-                <button id="read-btn">Read</button>
-                <button id="remove-btn">Remove</button>
-            </div>
             <dialog id="modal" id="modal">
                 <form method="dialog" class="form">
                     <button id="close-btn">x</button>
@@ -77,7 +35,7 @@
                         <label for="read">Read</label>
                         <input type="checkbox" name="read" id="read">
                     </div>
-                    <button type="submit">Add Book</button>
+                    <button type="submit" id="add-book">Add Book</button>
                 </form>
             </dialog>
         </div>
