--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -11,18 +11,18 @@
     <div class="game-container">
         <h1>Tic Tac Toe</h1>
         <div class="cell-container">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell" cellIndex = "0"></div>
+            <div class="cell" cellIndex = "1"></div>
+            <div class="cell" cellIndex = "2"></div>
+            <div class="cell" cellIndex = "3"></div>
+            <div class="cell" cellIndex = "4"></div>
+            <div class="cell" cellIndex = "5"></div>
+            <div class="cell" cellIndex = "6"></div>
+            <div class="cell" cellIndex = "7"></div>
+            <div class="cell" cellIndex = "8"></div>
         </div>
         <p class="player-turn player-one" id="player-turn">X's turn</p>
-        <p class="winner" id="winner">X is winner!</p>
+        <p class="winner-display" id="winner-display">X is winner!</p>
         <button type="button" class="restart-btn" id="restart-btn">Restart</button>
     </div>
 </body>
