Game is playable but without odin's requirements

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -21,8 +21,8 @@
             <div class="cell" cellIndex = "7"></div>
             <div class="cell" cellIndex = "8"></div>
         </div>
-        <p class="player-turn player-one" id="player-turn">X's turn</p>
-        <p class="winner-display" id="winner-display">X is winner!</p>
+        <p class="players-turn player-one" id="players-turn"></p>
+        <p class="winner-display" id="winner-display"></p>
         <button type="button" class="restart-btn" id="restart-btn">Restart</button>
     </div>
 </body>
